--- a/guidelinesWP/09-appendix.Rmd
+++ b/guidelinesWP/09-appendix.Rmd
@@ -1,4 +1,4 @@
-# Meta analysis of correlations in spawner abundances among CUs within SMUs {#app:meta-analysis-appendix}
+# META-ANALYSIS OF CORRELATIONS IN SPAWNER ABUNDANCES AMONG CUS WITHIN SMUS {#app:meta-analysis-appendix}
 
 
 
