--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -2,8 +2,6 @@
 
 ## BACKGROUND
 
-<!--CH comment: change all reference of multidimensional tool to the Pacific Salmon Status Scanner and for short the Salmon Scanner-->
-<!--CH: change all instances of $S_gen$ and other benchmarks to  S~gen~ and S~MSY~, after confirming with group-->
 
 Amendments to the Canadian Fisheries Act (2019) include new Fish Stocks provisions that introduce legal obligations to manage stocks to promote sustainability and avoid limit reference points, LRPs [@dfoScienceAdvicePrecautionary2021]. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions facing the stock. These obligations apply to major fish stocks that are prescribed under regulations. These revisions reinforce the previously established DFO policies to manage stocks in line with the precautionary approach, including [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm)[@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html) [@dfoCanadaPolicyConservation2005a].
 
@@ -17,7 +15,7 @@ Canada's Wild Salmon Policy, WSP, represents DFO's implementation of the Precaut
 
 Differences in adaptive traits among CUs results in diversity in CU-level responses to threats and environmental drivers. <!--KH: It is therefore expected that maintaining CU-level diversity will contribute to the establishment of portfolio effect of aggregations of CUs.--> Portfolio effects have been established <!--KH: demonstrated? --> for numerous salmon stocks, <!-- where portfolio effects are -->defined as population aggregates containing population and life-history diversity which produce temporally stable recruitment because of the complementary or independent dynamics among sub-populations [@schindlerPopulationDiversityPortfolio2010a]. <!-- KH: An alternative definition that focusses on the 'effect' would be to finish the above sentence as "... defined as a dampening of interannual variance in aggregate-level recruitment due to the complementary or independent dynamics among component sub-populations [@schindlerPopulationDiversityPortfolio2010] --> Population and life-history diversity can buffer species from environmental variability and contribute to long-term stability through differing responses to environmental changes, e.g., those anticipated under climate warming. Deterioration of portfolio effects have been observed for Pacific salmon in Canada, in part due to fishing practices that ignored underlying population structure (e.g., structure at the CU level) and associated biodiversity [@pricePortfolioSimplificationArising2021a].
 
-Under the WSP, status of individual CUs is represented by comparing status indicators to biological benchmarks delineating three zones of status, green, amber, and red. These zones represent increasing conservation concern from green to red requiring increasing management intervention. The lower benchmark, delineating the red and amber zones, is intended to be at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada (DFO 2005; Holt et al. 2009). One recommended lower benchmark on spawning abundances is the abundance resulting in recovery to $S_{MSY}$ in one salmon generation under equilibrium conditions, $S_{gen}$ [@holtEvaluationBenchmarksConservation2009]. Benchmarks for data-limited contexts have also been identified in recognition that the data required to estimate spawner-recruitment based benchmarks are not always available. See Section \@ref(cu-est-methods).
+Under the WSP, status of individual CUs is represented by comparing status indicators to biological benchmarks delineating three zones of status, green, amber, and red. These zones represent increasing conservation concern from green to red requiring increasing management intervention. The lower benchmark, delineating the red and amber zones, is intended to be at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada (DFO 2005; Holt et al. 2009). One recommended lower benchmark on spawning abundances is the abundance resulting in recovery to S~MSY~ in one salmon generation under equilibrium conditions, S~gen~ [@holtEvaluationBenchmarksConservation2009]. Benchmarks for data-limited contexts have also been identified in recognition that the data required to estimate spawner-recruitment based benchmarks are not always available. See Section \@ref(cu-est-methods).
 
 
 Under the WSP, the assessment of Pacific salmon has focused on setting benchmarks for individual salmon CUs [@dfoCanadaPolicyConservation2005a], the revised Fisheries Act includes language <!--KH: delete 'includes language' -->indicates that a single LRP may <!--KH: can 'may' be replaced with 'is' --> be required for each "Major Fish Stock" [@dfoScienceAdvicePrecautionary2021]. <!-- KH: the above sentence is missing a transition between the two parts; consider re-wording as "While the assessment of Pacific salmon under the WSP has focused on setting benchmarks for individual salmon CUs, the revised Fisheries Act indicates that a single LRP is required for each "Major Fish Stock""--> In the context of Pacific salmon, "Major Fish Stocks" are defined as Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status.  This provision created the need for the development of methodologies to estimate LRPs for management at the SMU level, while considering the need to maintain all CUs within an SMU above their lower benchmarks. The present work expands on previous work <!--KH: done to establish assessment methods under the WSP --> by providing guidance on establishing LRPs for management of <!--KH: replace 'for management of' to 'at the scale of' -->Pacific salmon SMUs.  Given the similar intent of LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, lower benchmarks can be used as proxies for LRPs but applied at the scale of CUs instead of SMUs. Our challenge is to identify LRPs that integrate <!--KH: CU-level estimates of status relative to lower benchmarks across all componet CUs within an SMU.--> status represented by WSP benchmarks across component CUs to the scale of SMUs. 
