--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -47,45 +47,22 @@ In addition, a CU may be data deficient if data to resolve the existence of the 
 ### Can Data Deficient CUs be Represented by CUs With Data? (Step 3)
 <!-- CH comment: send this section to Ron Kadowaki, Diana Dobson, and Brendan for review-->
 
-Third, the extent to which status of data deficient CUs can be inferred from CUs with data is evaluated. By definition, data deficient CUs do not have data on population dynamics to rigorously evaluate this inference through SMU-specific correlation analyses, though information on threats and biological characteristics may be available. To infer status for data deficient CUs, at a minimum we recommend providing evidence that: (i) the threats impacting data deficient CUs are likely to be the same as for CUs with data,  (ii) environmental drivers are also similar among CUs, e.g., as reflected by the distribution of CUs across biogeoclimatic and Marine Adaptive zones, (iii) biological characteristics, such as life-history type and dominant age-at-maturity of data-deficient CUs are represented in the CUs with data, and (iv) habitat capacity of data deficient CU is likely in the range of those represented by CUs with data. Evidence supporting these criteria should be clearly documented and reviewed by local experts. The burden of proof would be to identify that data deficient CUs have similar properties to neighbouring CUs, with the default assumption that each CU represents unique biodiversity where status and trends cannot be represented by other CUs. 
+Third, the extent to which status of data deficient CUs can be inferred from CUs with data is evaluated. By definition, data deficient CUs do not have data on population dynamics to rigorously evaluate this inference through SMU-specific correlation analyses, though information on threats and biological characteristics may be available. To infer status for data deficient CUs, at a minimum we recommend providing evidence that: (i) the threats impacting data deficient CUs are likely to be the same as for CUs with data,  (ii) environmental drivers are also similar among CUs, e.g., as reflected by the distribution of CUs across biogeoclimatic and Marine Adaptive zones, (iii) biological characteristics, such as life-history type and dominant age-at-maturity of data-deficient CUs are represented in the CUs with data, and (iv) population capacity of data deficient CU is likely in the range of those represented by CUs with data. Evidence supporting these criteria should be clearly documented and reviewed by local experts. The burden of proof would be to identify that data deficient CUs have similar properties to neighbouring CUs, with the default assumption that each CU represents unique biodiversity where status and trends cannot be represented by other CUs. We describe the four criteria in more detail below.
 
 
-Overall, our goal in this step is to identify if status and trends of CUs are likely to be consistent within an SMU. We refer to statuses against LRPs where data deficient CUs are represented by CUs with data as 'interim status', which is provisional until all component CUs can be assessed. In some cases natural variability alone may result in differences in status and trends even if the 4 criteria listed below are met, which underscores the benefits of monitoring and assessing all component CUs. <!--CH additional sentence to address possible 'weakening' of LRP status with word interim--> For LRPs based on 100% of CUs being above red status, an interim status indicating a breach of the LRP (i.e., at least one CU with red status) can still be used to trigger a rebuilding plan under the Fish Stock provisions since the improved monitoring of data-deficient CUs alone will not result in an increase in SMU status to 100% (all CUs above red status). 
+**Threats** are defined here as any human activity or process that causes harm, death, or behavioural changes to a species, or the destruction, degradation, and/or impairment of its habitat, to the extent that population-level effects occur [@dfoGuidanceAssessingThreats2014]. Information on threats may be derived from published threats and habitat assessments, and may incorporate harvest, effects of land-use in freshwater and estuarine habitats, climate change, and genetic impacts from hatcheries. Because SMUs are defined as groups of CUs that are managed together with the objective of achieving a joint status, it is likely that CUs within an SMU will have similar vulnerabilities to fisheries. Data on genetic stock identification from fisheries can be used to further assess similarities in vulnerabilities in harvest. Beyond fisheries, CUs that are vulnerable to different threats in freshwater and marine environment within an SMU may have divergent statuses and trends.  
 
 
-<!--CW: From the PA Policy:
-I'm sorry, I think I'd like to change my mind here. even if not all CUs are directly assessed, an LRP is still consistent with the PA policy and based on "best available science". Thinking about it again, I agree with Carrie that "interim" weakens the LRP. 
-CH: Does the additional sentence above address this issue? I think interim gives incentives to monitor if all CUs are > red, but doesn't stop triggering FSP if interim status is below LRP.
+Similarity in **environmental conditions and drivers** in estuarine and freshwater habitat as reflected in, for example, hydrological regimes and macroclimate in spawning and rearing areas. Differences in hydrological regimes, such as whether systems are fed by rainfall or snowmelt, can impact biological characteristics of Pacific salmon such as spawning time and age for Chinook Salmon, and can therefore impact status and trends [@beechieHydrologicRegimeConservation2006]. Broad similarities in macroclimate can be represented by Biogeoclimatic Zones, defined as "geographic areas having similar patterns of energy flow, vegetation and soils as a result of a broadly homogenous macroclimate." [@medingerEcosystemsBritishColumbia1991]<!--remove; (BC Ministry of Forestry 2021, https://www.for.gov.bc.ca/hfd/library/documents/glossary/Glossary.pdf). In other words, these terrestrial zones have relatively uniform climate and vegetation. There are approximately 18 biogeoclimatic zones in BC and the Yukon, ranging from Coastal Douglas-Fir on southeastern Vancouver Island to Boreal White and Black Spruce in northern BC. --> CUs with spawning and rearing grounds within different biogeoclimatic zones may experience different macroclimates and hence environmental drivers in estuaries and freshwater. Instead of biogeoclimatic zones, @holtbyConservationUnitsPacific2007 delineate freshwater ecological drainage units to differentiate freshwater ecosystems for Pacific salmon ("Freshwater Adaptive Zones", FAZ). These FAZs are defined primarily based on "Ecological Drainage Units" [@ministryoftheenvironmentEcologicalAquaticUnits2021] and consist of salmon populations with shared zoogeographic histories at relatively fine spatial scales. In some cases neighbouring CUs share a common FAZ (e.g., WCVI Chinook Salmon), but more often CUs tends to be associated with unique FAZs and therefore they may be less useful for identifying similarity in environmental conditions among CUs. Other levels of aggregation of Ecological Drainage Units could be developed in the future to inform similarities in freshwater conditions among CUs.  Overll, we recommend using a combination of variables (e.g, hydrological regimes, biogeoclimate zones, FAZs) when identifying similarities in freshwater conditions among CUs.
 
-"In resource management, the PA is, in general, about being cautious when scientific information is uncertain, unreliable or inadequate and not using the absence of adequate scientific information as a reason to postpone or fail to take action to avoid serious harm to the resource."
-But also:
-"In data deficient cases, priority should go to monitoring the stock and establishing data time series to support the identification of an LRP. When developing reference points efforts should be made to take into consideration the range of factors which may affect the productivity of the stock including changes in ocean conditions, where information is available."
+To identify similarities in environmental conditions in the nearshore marine environment, @holtbyConservationUnitsPacific2007 describe Marine Adaptive Zones, MAZs, for Pacific salmon which reflect "watershed-coastal ecosystems of distinct physical characteristics, including the full sequence of riverine, estuarine, and near-short marine habitats used by juvenile anadromous salmonids". There are 12 MAZs for Pacific salmon in BC and the Yukon, ranging from the Strait of Georgia in the south to the Bering Sea in the north (COSEWIC 2021 in press)<!--footnote this if not published-->.
 
-The PA policy also suggests that when a stock is DD, a meta analysis approach should be used to set LRPs (see annex 1b). 
-
-
-This may be a bit out there but: maybe we could suggest the establishment of a data collection plan that would be analogous to the recovery plan but to address data deficiency. -This plan would include a list of data that could be collected (e.g. monitoring of spawning grounds, establishment of genetic markers, catch sampling, ageing, etc.) and potential costs associated with everything? -- Also this plan could clearly indicate if spawning grounds are too remote, inaccessible, or too costly to monitor. -- I think that having that kind of information documented would go a long way in establishing priorities.    
--->
-
-<!--CH additional comments, from KH text (8 Dec)
- if there are missing CUs and we cannot infer their status, then we shouldn't say the SMU is above the LRP. What if the term 'interim' only applied to status statements that were above the LRP. Could we do: Case 1 (Data deficient CUs and status cannot be inferred from data rich): If one or more CUs with data is red, then SMU is below LRP. If all CUs are amber or green, then SMU is data deficient. Case 2 (Data deficient and status can be inferred from other CUs): If one or more CUs with data is red, then SMU is below LRP. If all CUs are amber or green, then SMU is provisionally above LRP, i.e., interim status.
-
--->
-
-**Threats** are defined here as any human activity or process that causes harm, death, or behavioural changes to a species, or the destruction, degradation, and/or impairment of its habitat, to the extent that population-level effects occur [@dfoGuidanceAssessingThreats2014]. Information on threats may be derived from published threats and habitat assessments, and may incorporate harvest, effects of land-use in freshwater and estuarine habitats, climate change, and genetic impacts from hatcheries. Because SMUs are defined as groups of CUs that are managed together with the objective of achieving a joint status, it is likely that CUs within an SMU will have similar vulnerabilities to fisheries. Data on genetic stock identification from fisheries can be used to further assess similarities in vulnerabilities in harvest. Beyond fisheries, CUs that are vulnerable to different threats in freshwater and marine environment within an SMU may have divergent statuses and trends. 
-
-<!--CH; revise text below to put more emphasis on FAZs. I just realized that all 3 WCVI CUs are in the same FAZ!-->
-
-Similarity in **environmental conditions and drivers** in estuarine and freshwater habitat as reflected in, for example, hydrological regimes and macroclimate in spawning and rearing areas. Differences in hydrological regimes, such as whether systems are fed by rainfall or snowmelt, can impact biological characteristics of Chinook salmon, such as spawning time and age, and <!--can--> therefore <!--impact --> status and trends [@beechieHydrologicRegimeConservation2006] <!--KH: could consider moving beechie citation to after mention of imapcts on spawn timing and age since this is what his paper looked at; the extension to status and trends is ours (which is logical, but not quite what they showed) -->. Broad similarities in macroclimate can be represented by Biogeoclimatic Zones, defined as "geographic areas having similar patterns of energy flow, vegetation and soils as a result of a broadly homogenous macroclimate." [@medingerEcosystemsBritishColumbia1991]<!--remove; (BC Ministry of Forestry 2021, https://www.for.gov.bc.ca/hfd/library/documents/glossary/Glossary.pdf). In other words, these terrestrial zones have relatively uniform climate and vegetation. There are approximately 18 biogeoclimatic zones in BC and the Yukon, ranging from Coastal Douglas-Fir on southeastern Vancouver Island to Boreal White and Black Spruce in northern BC. --> CUs with spawning and rearing grounds within different biogeoclimatic zones may experience different macroclimates and hence environmental drivers in estuaries and freshwater. Instead of biogeoclimatic zones, @holtbyConservationUnitsPacific2007 delineate freshwater ecological drainage units to differentiate freshwater ecosystems for Pacific salmon ("Freshwater Adaptive Zones"<!--;FAZ (KH: suggestion to give abbreviation here so can be used below; I found I was getting lost from reference to 'units'; I think referring directly to FAZ would help)-->). These units"<!-- FAZ --> are defined primarily based on "Ecological Drainage Units" [@ministryoftheenvironmentEcologicalAquaticUnits2021] and consist of salmon populations with shared zoogeographic histories at relatively fine spatial scales such that each CU tends to be associated with a unique <!--FAZ-->unit. Therefore <!--FAZ -->those units are less useful for identifying similarity in environmental conditions among CUs, though other levels of aggregation of Ecological Drainage Units could be developed in the future to inform similarities in freshwater conditions among CUs.  <!-- KH: should we explicitly say that we recommend using biogeoclimatic zones instead of FAZ alone when assessing possible similarity to environmental drivers associated with freshwater habitats?-->
-
-To identify similarities in environmental conditions and drivers in the nearshore marine environment, @holtbyConservationUnitsPacific2007 describe Marine Adaptive Zones for Pacific salmon which reflect "watershed-coastal ecosystems of distinct physical characteristics, including the full sequence of riverine, estuarine, and near-short marine habitats used by juvenile anadromous salmonids". There are 12 Marine Adaptive zones for Pacific salmon in BC and the Yukon, ranging from the Strait of Georgia in the south to the Bering Sea in the north (COSEWIC 2021 in press)<!--footnote this if not published-->. <!-- KH: I would suggest moving the next sentence to the start of the next paragraph -->Although SMUs are usually defined to be spatially cohesive groups of CUs and therefore component CUs may experience similar environmental conditions, SMUs and their component CUs often span multiple hydrological regimes, biogeoclimatic zones, and Marine Adaptive zones.  
-
-CUs containing unique environmental drivers within an SMU may have divergent statuses and trends from neighbouring CUs, either directly due to the different environments or their interaction with other natural drivers and anthropogenic threats.
+Although SMUs are usually defined to be spatially cohesive groups of CUs and therefore component CUs may experience similar environmental conditions, SMUs and their component CUs often span multiple hydrological regimes, biogeoclimatic zones, FAZs or MAZs.  <!--CH: this last sentence is in response to Diana Dobson's comment that SMUs are defined to have CUs with similar characteristics, to an extent-->CUs containing unique environmental drivers within an SMU may have divergent statuses and trends from neighbouring CUs, either directly due to the different environments or their interaction with other natural drivers and anthropogenic threats.
 
 
 CUs with similar **life-history characteristics** are more likely to respond to common threats and environmental drivers in the same way compared with those with divergent characteristics. For example, Chinook Salmon exhibit at least two distinct life-histories, named stream and ocean types. Stream-type fish rear for more than a year in freshwater and tend to migrate far offshore during their marine stage, whereas ocean-type fish migrate to the ocean as subyearlings (< 1 year) and tend to remain near shore during marine life. These different emigration patterns are believed to have evolved as a consequence of differences in food resources and survival rates in the freshwater and marine environments, and result in different vulnerabilities to physical and biological conditions in those environments.  CUs with different life-history characteristics cannot be used to represent each other under data deficiencies. In some cases, SMUs have been defined to account for differences in life-history in order to better achieve joint status under common management regime (e.g., Fraser Chinook where SMUs are defined in part based on dominant ages at maturity). In other SMUs, CUs with various life-history types are combined (e.g., the Mainland Inlet Chinook SMU which contains CUs with ocean and stream-type fish) <!--CH: to confirm with Diana and Ron. CU34-HOMATH (ocean-type) and CU35-KLINA (stream-type) both in Mainland Inlets CK SMU-->.
 
-CUs with very different **habitat capacities** may respond differently to similar threats. For example, very small CUs may be more vulnerable to moderate fishing pressure if abundances drop below critical conservation thresholds, e.g., 1500 fish an abundance threshold within the Pacific Salmon Status Scanner, whereas very large CUs may be more resilient to common threats.    <!--CH: I think about COSEWIC criteria which identify DUs < 1000 as Threatened, and also DUs < 10,000 with declining trend as Threatened. For Pacific salmon, the habitat capacity of CUs can span this range (<1000 to >10,000) making some CUs inherently more vulnerable than others, presumably.-->
+CUs with very different **population capacities** may respond differently to similar threats. For example, very small CUs may be more vulnerable to moderate fishing pressure if abundances drop below critical conservation thresholds, e.g., 1500 fish an abundance threshold within the Pacific Salmon Status Scanner, whereas very large CUs may be more resilient to common threats.    <!--CH: I think about COSEWIC criteria which identify DUs < 1000 as Threatened, and also DUs < 10,000 with declining trend as Threatened. For Pacific salmon, the habitat capacity of CUs can span this range (<1000 to >10,000) making some CUs inherently more vulnerable than others, presumably.-->
 <!--CW: I believe Luke also saw this effect in the Chum study case - i.e. smaller CUs were more likely to be below their benchmarks.-->
 
 <!--KH: Do we know what the 1500 used in the salmon scanner tool was based on? Was it a result from the decision tree analysis?  Or, was it picked a priori as a threshold based on some other rationale?  I'm wondering if it makes more sense to use the COSEWIC 1000 fish threshold for this example if it's somehow more firmly rooted in conservation theory / literature as a criticical threshold?  I'm not sure on this - just a thought.  -->
@@ -118,6 +95,28 @@ Once LRPs are identified, SMU-level objectives <!--KH: can be specified and -->a
 The status of individual CUs is assessed and the proportion of CUs with status above red is then compared to the LRP of 100% identified from step 4.  Where available, we recommend applying CU assessments from recent peer-reviewed WSP Integrated Status Assessments, in which multiple metrics, such as abundances and short- and long-term trends, are integrated to assign CU status within an expert-driven process [holtIndicatorsStatusBenchmarks2009a; @dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @grant2017FraserSockeye2020]. Here we define recent as within the most recent generation as a general guideline, though major perturbations such as landslide events may make even recent assessments unrepresentative of current conditions if the impact of those events are not accounted for. <!--CH remove: Over time-periods longer than a generation, the extent to which the assessment is still representative depends on the dynamics of the specific system.-->
 
 Because WSP Integrated status assessments are time-intensive processes and are not available for most CUs, we demonstrate the application of the Pacific Salmon Status Scanner, which is a tool developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP multidimensional assessment framework (Pestal et al. in prep). More details on this approach are provided in Section \@ref(cu-est-methods) and our companion working paper (Holt et al. in review). Within this framework, CU status depends on a variety of population metrics, where the choice of metrics depends on data availability and may differ among CUs within an SMU. The Salmon Scanner integrates status on available metrics to derive an overall status that is comparable among CUs. <!--CH Q; does this last sentence make sense? I'm trying to say that although status of one CU might be based on SR benchmark and another may be based on trends, the resulting statuses from the Salmon Scanner are still comparable-->
+
+
+
+<!--CH: reworded text on 'interim' status. Please let me know what you think.-->
+*Interim status*
+
+Given an LRP of 100% of CUs above red status, where data deficient CUs are represented by CUs with data we refer to resulting status as 'interim' when all CUs included in assessment are above red status. This 'interim status' is provisional until all component CUs can be assessed. In some cases natural variability alone may result in differences in status and trends even if the four criteria listed above are met, which underscores the benefits of monitoring and assessing all component CUs. Where data deficient CUs are not represented by CUs with data, and all CUs included in the assessment are above red status, then the SMU is considered data deficient and SMU status cannot be evaluated. In both cases, we recommend improved monitoring to fill CU-level assessment gaps.
+
+When data are missing for one or more CUs, and at least one of data-rich CUs are below the red zone, the LRP of 100% CUs above the red zone is considered breached, regardless of whether the data-deficient CUs are represented by data-rich CUs or not. A breach of the LRP (i.e., at least one CU with red status) can be used to trigger a rebuilding plan under the Fish Stock provisions since the improved monitoring of data-deficient CUs alone will not result in an increase in SMU status to 100% (all CUs above red status). 
+
+<!--CW: From the PA Policy:
+
+"In resource management, the PA is, in general, about being cautious when scientific information is uncertain, unreliable or inadequate and not using the absence of adequate scientific information as a reason to postpone or fail to take action to avoid serious harm to the resource."
+But also:
+"In data deficient cases, priority should go to monitoring the stock and establishing data time series to support the identification of an LRP. When developing reference points efforts should be made to take into consideration the range of factors which may affect the productivity of the stock including changes in ocean conditions, where information is available."
+
+The PA policy also suggests that when a stock is DD, a meta analysis approach should be used to set LRPs (see annex 1b). 
+
+This may be a bit out there but: maybe we could suggest the establishment of a data collection plan that would be analogous to the recovery plan but to address data deficiency. -This plan would include a list of data that could be collected (e.g. monitoring of spawning grounds, establishment of genetic markers, catch sampling, ageing, etc.) and potential costs associated with everything? -- Also this plan could clearly indicate if spawning grounds are too remote, inaccessible, or too costly to monitor. -- I think that having that kind of information documented would go a long way in establishing priorities.    
+-->
+
+
 
 ### Peer-review Assessments of Status Relative to Proportion-based LRP (Step 6)
 <!--CH comment: this section needs input from Sue-->
