--- a/guidelinesWP/index.Rmd
+++ b/guidelinesWP/index.Rmd
@@ -5,10 +5,9 @@ author: |
   Kendra Holt^2^
   Luke Warkentin^1^ 
   Catarina Wor^1^ 
-  Connors, Brendan ^2^ 
-  Huang, Ann-Marie ^3^ and
-  others (TBD)
-author_list: "Holt, C.A., Holt, K., Warkentin, L., Wor, C. and others(TBD)"
+  Brendan Connors ^2^ 
+  Ann-Marie Huang ^3^ 
+author_list: "Holt, C.A., Holt, K., Warkentin, L., Wor, C., Connors, B., and Huang, A.-M."
 address: |
   ^1^Pacific Biological Station\
      Fisheries and Oceans Canada, 3190 Hammond Bay Road\
@@ -19,10 +18,10 @@ address: |
      Fisheries and Oceans Canada, Delta, BC, Canada\
 
 month: Month # fill in
-year: 2021
+year: 2022
 report_number: nnn
 region: Pacific Region
-citation_other_language: "Holt, C.A., Holt, K., Warkentin, L., et autres. Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. DFO Secr. can. de consult. sci. du MPO. Doc. de rech 2021/nnn. iv + 13 p."
+citation_other_language: "Holt, C.A., Holt, K., Warkentin, L., Wor, C., Connors, B., et Huang, A.-M.. Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. DFO Secr. can. de consult. sci. du MPO. Doc. de rech 2021/nnn. iv + 13 p."
 abstract: |
 
   Limit Reference Points are required by law under the new Fish Stocks provisions of the revised Fisheries Act for major fish stocks prescribed under regulations. ....
