--- a/caseStudyWP/08-appendix-chum-data.Rmd
+++ b/caseStudyWP/08-appendix-chum-data.Rmd
@@ -5,7 +5,7 @@ After that, all subsequent sections will be turned into appendices. -->
 
 `r if(!knitr:::is_latex_output()) '# (APPENDIX) Appendix {-}'`
 
-# SUPPORTING INFORMATION FOR INNER SOUTH COAST CHUM SALMON CASE STUDY {#app:08-appendix-chum-data}
+# SUPPORTING INFORMATION FOR INNER SOUTH COAST CHUM SALMON CASE STUDY {#app:appendix-chum}
 
 ## DATA SOURCES & TREATMENT FOR INNER SOUTH COAST CHUM SALMON - NON FRASER 
  
